fix radio button display issue

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="die2"></div>
         <div class="options">
             <label>
-                <input type="radio" name="mode" value="justRoll" checked />
+                <input type="radio" name="mode" value="justRoll" />
                 Just Roll the Dice
             </label>
             <label>
